css/style.css
a{
  text-decoration: none;
  color: black;
}
a:hover{
  text-decoration: underline;
}

/*start of navbar styles*/
#navbar{
  box-sizing: border-box;
  width: 100vw;
  height: 40px;
  border-bottom: 1px solid gray;
  position: fixed;
  top: 0;
  left: 0;
  background-color: white;
  z-index: 10;
  padding: 5px 20px;
  font-family: arial;
  font-size: 14px;
}

#navbar button{
  cursor: pointer;
}

.icon-button{
  float: left;
  width: 30px;
  height: 30px;
  margin-right: 5px;
  border: none;
  border-radius: 5px;
  background-color: white;
  padding: 0;
}

.icon-button img {
  width: 16px;
  height: 16px;
  margin: 7px;
}

.icon-button:hover{
  background-color: rgba(200, 200, 200, 0.2);
}

.weird-link{
  float: left;
  height: 30px;
  position: relative;
  bottom: 10px;
}

.logo{
  width: 230px;
  height: 30px;
  margin: 0 auto;
}

.logo img{
  width: 100%;
  height: 100%;
}

.blue-button{
  float: right;
  color: white;
  font-weight: bold;
  background-color: #6288a5;
  border: 1px solid #326891;
  border-radius: 3px;
  height: 30px;
  margin-left: 5px;
}

.blue-button:hover{
  background-color: #326891;
}
/*end of navbar styles*/


/* flex stuff */
.flex-col {
  display: flex;
  flex-direction: column;
}
.flex-row {
  display: flex;
}
.space-between {
  justify-content: space-between;
}
.start {
  justify-content: flex-start;
}
.center{
  justify-content: center;
}
.align-center{
  align-items: center;
}
.align-start {
  align-items: flex-start;
}
.align-end {
  align-items: flex-end;
}
/* end of flex stuff */


.float-left {
  float: left;
}

.float-right{
  float: right;
}

.content {
  width: 50%;
  margin: 0 auto;
  text-align: left;
  padding-top: 50px;
}

.content h1{
  font-size: 26px;
  width: 60%;
  font-style: italic;
}

.title-img img {
  width: 100%;
}

.title-img  p {
  width: 80%;
  margin: 0;
  font-size: 12px;
  color: gray;
}

.title-img {
  position: relative;
  left: -100px;
  width: 60vw;
  margin-bottom: 30px;
}

.post-meta {
  height: 100px;
  font-size: 14px;
}

.post-meta p {
  font-weight: 600;
}

.post-meta a {
  text-decoration: underline;
  color: black;
}

.post-meta a:hover {
  text-decoration: none;
}

.post-meta span {
  color: gray;
}

.post-meta div {
  height: 40px;
}

.icons i {
  margin-right: 15px;
  border-radius: 100%;
  padding: 12px;
  width: 15px;
  background-color: silver;
  border: 1px solid silver;
  text-align: center;
}

.icons i:hover {
  background-color: white;
  border: 1px solid silver;
}

.article .post-content p, h2 {
  font-size: 16px;
}

.post-footer {
  margin-top: 50px;
}

.sidebar {
position: absolute;
right: 10%;
width: 10%;
}

.sidebar p.title {
  font-weight: 600;
}

.sidebar p.signup {
  font-size: 13px;
}

.editors {
  display: flex;
}

.editors img {
  width: 75px;
  height: 75px;
 margin: 0 5px 15px 0;
}

.sidebar .editors p {
  margin: 0;
  font-size: 12px;
}

/* related articles section below*/
.more {
  width: 90%;
  margin: 50px auto;
}

.more div.float-left {
  width: 70%;
}

.more div.float-right {
  width: 25%;
}

.more h2 {
  margin: 20px 0;
  padding: 0;
}

.more a {
  color: black;
}

.more a:hover {
  color: gray;
  text-decoration: none;
}

.more a.different:hover{
  color: black;
  text-decoration: underline;
}

.more-section {
  border-top: 1px solid black;
}

.popular-container{
  border-top: 1px solid silver;
  padding-top: 10px;
}

.more-container figure {
  margin: 0;
}

.more-container figcaption {
  font-size: 8px;
  text-align: right;
  color: gray;
}

.more-container img{
  width: 100%;
}

.editor-pick {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 15px;
}

.section-pick {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr;
  grid-gap: 15px;
}

.date {
  margin-top: 0;
  font-size: 11px;
  color: gray;
}
/* related articles section above*/

/* footer section below*/
.footer {
  clear: both;
  margin: 50px auto;
  width: 90%;
  border-top: 4px double silver;
  font-family: verdana;
}

.footer .logo{
  margin: 10px 0;
}

.footer .home{
  color: #326891;
  font-size: 11px;
  text-decoration: none;
}

.footer h4 {
  margin-top: 0;
}

.footer-column {
  margin: 10px 0;
  font-size: 12px;
}

.footer p{
  margin: 5px 0;
}

.last-column {
  border-left: 1px solid silver;
  padding-left: 15px;
  margin: 10px 0;
  font-size: 12px;
  height: 100%;
}

.box-1 {
  font-size: 14px;
  font-weight: bold;
}

.box-2 {
  font-size: 10px;
  padding: 10px 0;
}

.box-3 {
  font-size: 10px;
  padding: 10px 0;
  border-top: 1px solid silver;
  width: 100%;
}

.last-section {
  border-top: 1px solid silver;
  padding: 7px 0;
  margin-bottom: 50px;
}

.last-section a{
  font-size: 10px;
  color: gray;
  margin: 0 10px;
}
/* footer section above*/


/* article add-ons */
.post-cut {
  display: grid;
  grid-template-columns: repeat(4, 162px);
  grid-template-rows: repeat(2,320px);
  background-image: url('../img/inflation.png');
  background-size: 650px 648px;
  background-repeat: no-repeat;
  background-position: center;
  grid-gap: 8px;
  justify-content: center;
}

.post-content .post-cut .grid-info{
 position: relative;
 top: 110px;
}

.post-content .post-cut .grid-info p  {
 font-size: 13px;
 font-family: Arial, Helvetica, sans-serif;
}

.post-content .title-graph p {
  font-size: 14px;
  color: gray;
}

.post-content .post-video iframe {
  width: 100%;
  height: 450px;
}

.post-content .post-video p {
  font-size: 15px;
  margin-bottom: 0;
}

.post-content .post-video span {
  font-size: 12px;
  color: gray;
}

.post-content .post-img {
  position: relative;
  width: 100%;
}

.post-content .post-img figure img {
  width: 100%;
}

.post-content figure figcaption {
  font-size: 15px;
  color: gray;
}
/* article add-ons */

